Add class option instead of tags

--- a/scss/editor/lists/_family-tree.scss
+++ b/scss/editor/lists/_family-tree.scss
@@ -4,13 +4,13 @@ body {
     --family-tree-connectors-color: var(--background-secondary);
 }
 
-ul:has(> li > .tag[href='#family-tree']) {
+ul:has(> li > :is(.tag[href='#family-tree'], .family-tree)) {
     --list-spacing: 0;
     --list-indent: 0;
 
     overflow-x: scroll;
 
-    li:has(> .tag[href='#family-tree']) {
+    li:has(> :is(.tag[href='#family-tree'], .family-tree)) {
         display: none;
     }
 
@@ -57,8 +57,8 @@ ul:has(> li > .tag[href='#family-tree']) {
     }
 
     // Spouse info tooltip
-    .tag[href='#wed'] { display: none; }
-    li:has(> .tag[href='#wed']) {
+    :is(.tag[href='#wed'], .wed) { display: none; }
+    li:has(> :is(.tag[href='#wed'], .wed)) {
         display: none;
         position: absolute;
         left: 50%;
@@ -72,7 +72,7 @@ ul:has(> li > .tag[href='#family-tree']) {
         z-index: var(--layer-tooltip);
         top: 0;
     }
-    li:has(> .tag[href='#wed'])::before {
+    li:has(> :is(.tag[href='#wed'], .wed))::before {
         content: "Wed to ";
         display: unset;
         position: unset;
@@ -80,14 +80,14 @@ ul:has(> li > .tag[href='#family-tree']) {
     }
 
     // Spouse ring icon
-    li:has(> ul > li > .tag[href='#wed']) > .list-bullet {
+    li:has(> ul > li > :is(.tag[href='#wed'], .wed)) > .list-bullet {
         display: inline-block;
         float: none;
         margin-inline-start: 0;
         margin-inline-end: 0.1em;
         transform: translateY(-0.2em);
     }
-    li:has(> ul > li > .tag[href='#wed']) > .list-bullet::after {
+    li:has(> ul > li > :is(.tag[href='#wed'], .wed)) > .list-bullet::after {
         content: "💍";
         position: static;
         margin: 0;
@@ -97,24 +97,24 @@ ul:has(> li > .tag[href='#family-tree']) {
         background: none;
         box-shadow: none;
     }
-    li:has(> ul > li > .tag[href='#wed']):has(> .list-bullet:hover) > ul > li:has(> .tag[href='#wed']) {
+    li:has(> ul > li > :is(.tag[href='#wed'], .wed)):has(> .list-bullet:hover) > ul > li:has(> :is(.tag[href='#wed'], .wed)) {
         display: block;
     }
 
     // element with no child, or only a spouse (#wed)
     li:not(:has(ul)),
-    li:has(> ul > li:only-child > .tag[href='#wed']) {
+    li:has(> ul > li:only-child > :is(.tag[href='#wed'], .wed)) {
         text-wrap: nowrap;
         .list-collapse-indicator { display: none; }
     }
 
     ul:not(:has(ul))::before,
-    ul:has(> li:only-child > .tag[href='#wed'])::before {
+    ul:has(> li:only-child > :is(.tag[href='#wed'], .wed))::before {
         height: 30px;
     }    
 
     li:not(:has(ul))::after,
-    li:has(> ul > li:only-child > .tag[href='#wed'])::after {
+    li:has(> ul > li:only-child > :is(.tag[href='#wed'], .wed))::after {
         height: 20px;
     }
 
@@ -146,7 +146,7 @@ ul:has(> li > .tag[href='#family-tree']) {
         height: 10px;
     }
 
-    li:has(> .tag[href='#wed'])::after {
+    li:has(> :is(.tag[href='#wed'], .wed))::after {
         content: none;
     }
 
@@ -163,10 +163,10 @@ ul:has(> li > .tag[href='#family-tree']) {
     }
 
     // Remove left connector from first child and connector from last child
-    li:first-child:has(> .tag[href='#wed']) + li::before,
-    li:first-child:has(> .tag[href='#family-tree']) + li::before,
-    li:has(+ li:last-child > .tag[href='#wed'])::after,
-    li:has(+ li:last-child > .tag[href='#family-tree'])::after,
+    li:first-child:has(> :is(.tag[href='#wed'], .wed)) + li::before,
+    li:first-child:has(> :is(.tag[href='#family-tree'], .family-tree)) + li::before,
+    li:has(+ li:last-child > :is(.tag[href='#wed'], .wed))::after,
+    li:has(+ li:last-child > :is(.tag[href='#family-tree'], .family-tree))::after,
     li:first-child::before,
     li:last-child::after {
         border-top: none;
@@ -193,19 +193,19 @@ ul:has(> li > .tag[href='#family-tree']) {
     }
 
     // Reduce heights for downward connectors if multiple childs
-    ul:not(:has(> li:first-child > .tag[href='#wed']):has(> li:nth-child(2):last-child))::before {
+    ul:not(:has(> li:first-child > :is(.tag[href='#wed'], .wed)):has(> li:nth-child(2):last-child))::before {
         height: 10px;
     }
 
     // Remove downward connectors if no child
     ul:not(:has(> li))::before,
-    ul:has(> li:first-child:last-child > .tag[href='#wed'])::before {
+    ul:has(> li:first-child:last-child > :is(.tag[href='#wed'], .wed))::before {
         content: none;
     }
 
     // Remove upwards connectors if only child
-    li:not(:has(> .tag[href='#wed'])):first-child:last-child,
-    li:has(> .tag[href='#wed']) + li:last-child::after {
+    li:not(:has(> :is(.tag[href='#wed'], .wed))):first-child:last-child,
+    li:has(> :is(.tag[href='#wed'], .wed)) + li:last-child::after {
         content: none;
     }
 }
