--- a/css/editor/lists/family-tree.css
+++ b/css/editor/lists/family-tree.css
@@ -12,18 +12,18 @@ body {
   --family-tree-connectors-color: var(--background-secondary);
 }
 
-ul:has(> li > .tag[href="#family-tree"]) {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) {
   --list-spacing: 0;
   --list-indent: 0;
   overflow-x: scroll;
 }
-ul:has(> li > .tag[href="#family-tree"]) li:has(> .tag[href="#family-tree"]) {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li:has(> :is(.tag[href="#family-tree"], .family-tree)) {
   display: none;
 }
-ul:has(> li > .tag[href="#family-tree"]) .list-bullet {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) .list-bullet {
   display: none;
 }
-ul:has(> li > .tag[href="#family-tree"]) .list-collapse-indicator {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) .list-collapse-indicator {
   position: absolute;
   opacity: 1;
   top: 10px;
@@ -39,28 +39,28 @@ ul:has(> li > .tag[href="#family-tree"]) .list-collapse-indicator {
   border: 1px solid var(--color-accent);
   z-index: 1;
 }
-ul:has(> li > .tag[href="#family-tree"]) .list-collapse-indicator.is-collapsed {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) .list-collapse-indicator.is-collapsed {
   background: var(--color-accent);
 }
-ul:has(> li > .tag[href="#family-tree"]) .list-collapse-indicator:hover {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) .list-collapse-indicator:hover {
   background: color-mix(in srgb, var(--color-accent), var(--workleaves-background) 70%);
 }
-ul:has(> li > .tag[href="#family-tree"]) .list-collapse-indicator.is-collapsed:hover {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) .list-collapse-indicator.is-collapsed:hover {
   background: color-mix(in srgb, var(--color-accent), var(--workleaves-background) 30%);
 }
-ul:has(> li > .tag[href="#family-tree"]) .list-collapse-indicator svg {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) .list-collapse-indicator svg {
   display: none;
 }
-ul:has(> li > .tag[href="#family-tree"]) li.is-collapsed {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li.is-collapsed {
   text-wrap: nowrap;
 }
-ul:has(> li > .tag[href="#family-tree"]) li.is-collapsed > ul > * {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li.is-collapsed > ul > * {
   display: none;
 }
-ul:has(> li > .tag[href="#family-tree"]) .tag[href="#wed"] {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) :is(.tag[href="#wed"], .wed) {
   display: none;
 }
-ul:has(> li > .tag[href="#family-tree"]) li:has(> .tag[href="#wed"]) {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li:has(> :is(.tag[href="#wed"], .wed)) {
   display: none;
   position: absolute;
   left: 50%;
@@ -74,20 +74,20 @@ ul:has(> li > .tag[href="#family-tree"]) li:has(> .tag[href="#wed"]) {
   z-index: var(--layer-tooltip);
   top: 0;
 }
-ul:has(> li > .tag[href="#family-tree"]) li:has(> .tag[href="#wed"])::before {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li:has(> :is(.tag[href="#wed"], .wed))::before {
   content: "Wed to ";
   display: unset;
   position: unset;
   color: #727272;
 }
-ul:has(> li > .tag[href="#family-tree"]) li:has(> ul > li > .tag[href="#wed"]) > .list-bullet {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li:has(> ul > li > :is(.tag[href="#wed"], .wed)) > .list-bullet {
   display: inline-block;
   float: none;
   margin-inline-start: 0;
   margin-inline-end: 0.1em;
   transform: translateY(-0.2em);
 }
-ul:has(> li > .tag[href="#family-tree"]) li:has(> ul > li > .tag[href="#wed"]) > .list-bullet::after {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li:has(> ul > li > :is(.tag[href="#wed"], .wed)) > .list-bullet::after {
   content: "💍";
   position: static;
   margin: 0;
@@ -97,26 +97,26 @@ ul:has(> li > .tag[href="#family-tree"]) li:has(> ul > li > .tag[href="#wed"]) >
   background: none;
   box-shadow: none;
 }
-ul:has(> li > .tag[href="#family-tree"]) li:has(> ul > li > .tag[href="#wed"]):has(> .list-bullet:hover) > ul > li:has(> .tag[href="#wed"]) {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li:has(> ul > li > :is(.tag[href="#wed"], .wed)):has(> .list-bullet:hover) > ul > li:has(> :is(.tag[href="#wed"], .wed)) {
   display: block;
 }
-ul:has(> li > .tag[href="#family-tree"]) li:not(:has(ul)),
-ul:has(> li > .tag[href="#family-tree"]) li:has(> ul > li:only-child > .tag[href="#wed"]) {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li:not(:has(ul)),
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li:has(> ul > li:only-child > :is(.tag[href="#wed"], .wed)) {
   text-wrap: nowrap;
 }
-ul:has(> li > .tag[href="#family-tree"]) li:not(:has(ul)) .list-collapse-indicator,
-ul:has(> li > .tag[href="#family-tree"]) li:has(> ul > li:only-child > .tag[href="#wed"]) .list-collapse-indicator {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li:not(:has(ul)) .list-collapse-indicator,
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li:has(> ul > li:only-child > :is(.tag[href="#wed"], .wed)) .list-collapse-indicator {
   display: none;
 }
-ul:has(> li > .tag[href="#family-tree"]) ul:not(:has(ul))::before,
-ul:has(> li > .tag[href="#family-tree"]) ul:has(> li:only-child > .tag[href="#wed"])::before {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) ul:not(:has(ul))::before,
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) ul:has(> li:only-child > :is(.tag[href="#wed"], .wed))::before {
   height: 30px;
 }
-ul:has(> li > .tag[href="#family-tree"]) li:not(:has(ul))::after,
-ul:has(> li > .tag[href="#family-tree"]) li:has(> ul > li:only-child > .tag[href="#wed"])::after {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li:not(:has(ul))::after,
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li:has(> ul > li:only-child > :is(.tag[href="#wed"], .wed))::after {
   height: 20px;
 }
-ul:has(> li > .tag[href="#family-tree"]), ul:has(> li > .tag[href="#family-tree"]) ul {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)), ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) ul {
   display: flex;
   justify-content: center;
   padding-top: 10px;
@@ -124,15 +124,15 @@ ul:has(> li > .tag[href="#family-tree"]), ul:has(> li > .tag[href="#family-tree"
   position: relative;
   background-color: var(--workleaves-background);
 }
-ul:has(> li > .tag[href="#family-tree"]) li {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li {
   float: left;
   text-align: center;
   list-style-type: none;
   position: relative;
   padding: 20px 5px 0 5px;
 }
-ul:has(> li > .tag[href="#family-tree"]) li::before,
-ul:has(> li > .tag[href="#family-tree"]) li::after {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li::before,
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li::after {
   content: "";
   position: absolute;
   top: 0;
@@ -141,30 +141,30 @@ ul:has(> li > .tag[href="#family-tree"]) li::after {
   width: 50%;
   height: 10px;
 }
-ul:has(> li > .tag[href="#family-tree"]) li:has(> .tag[href="#wed"])::after {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li:has(> :is(.tag[href="#wed"], .wed))::after {
   content: none;
 }
-ul:has(> li > .tag[href="#family-tree"]) li::after {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li::after {
   right: auto;
   left: 50%;
   border-left: 1px solid var(--family-tree-connectors-color);
 }
-ul:has(> li > .tag[href="#family-tree"]) li:only-child::after,
-ul:has(> li > .tag[href="#family-tree"]) li:only-child::before {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li:only-child::after,
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li:only-child::before {
   display: none;
 }
-ul:has(> li > .tag[href="#family-tree"]) li:first-child:has(> .tag[href="#wed"]) + li::before,
-ul:has(> li > .tag[href="#family-tree"]) li:first-child:has(> .tag[href="#family-tree"]) + li::before,
-ul:has(> li > .tag[href="#family-tree"]) li:has(+ li:last-child > .tag[href="#wed"])::after,
-ul:has(> li > .tag[href="#family-tree"]) li:has(+ li:last-child > .tag[href="#family-tree"])::after,
-ul:has(> li > .tag[href="#family-tree"]) li:first-child::before,
-ul:has(> li > .tag[href="#family-tree"]) li:last-child::after {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li:first-child:has(> :is(.tag[href="#wed"], .wed)) + li::before,
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li:first-child:has(> :is(.tag[href="#family-tree"], .family-tree)) + li::before,
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li:has(+ li:last-child > :is(.tag[href="#wed"], .wed))::after,
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li:has(+ li:last-child > :is(.tag[href="#family-tree"], .family-tree))::after,
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li:first-child::before,
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li:last-child::after {
   border-top: none;
 }
-ul:has(> li > .tag[href="#family-tree"]) li:only-child {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li:only-child {
   padding-top: 0;
 }
-ul:has(> li > .tag[href="#family-tree"]) ul::before {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) ul::before {
   content: "";
   position: absolute;
   top: 0;
@@ -176,14 +176,14 @@ ul:has(> li > .tag[href="#family-tree"]) ul::before {
   bottom: unset;
   border-inline-end: unset;
 }
-ul:has(> li > .tag[href="#family-tree"]) ul:not(:has(> li:first-child > .tag[href="#wed"]):has(> li:nth-child(2):last-child))::before {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) ul:not(:has(> li:first-child > :is(.tag[href="#wed"], .wed)):has(> li:nth-child(2):last-child))::before {
   height: 10px;
 }
-ul:has(> li > .tag[href="#family-tree"]) ul:not(:has(> li))::before,
-ul:has(> li > .tag[href="#family-tree"]) ul:has(> li:first-child:last-child > .tag[href="#wed"])::before {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) ul:not(:has(> li))::before,
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) ul:has(> li:first-child:last-child > :is(.tag[href="#wed"], .wed))::before {
   content: none;
 }
-ul:has(> li > .tag[href="#family-tree"]) li:not(:has(> .tag[href="#wed"])):first-child:last-child,
-ul:has(> li > .tag[href="#family-tree"]) li:has(> .tag[href="#wed"]) + li:last-child::after {
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li:not(:has(> :is(.tag[href="#wed"], .wed))):first-child:last-child,
+ul:has(> li > :is(.tag[href="#family-tree"], .family-tree)) li:has(> :is(.tag[href="#wed"], .wed)) + li:last-child::after {
   content: none;
 }
