--- a/scss/mobile/_mobile.scss
+++ b/scss/mobile/_mobile.scss
@@ -3,6 +3,10 @@
 @forward '../shared/workleaves';
 
 .is-mobile {
+    --file-margins-block: var(--size-4-2);
+    --file-margins-inline: var(--size-4-6);
+    --file-margins: var(--file-margins-block) var(--file-margins-inline);
+    --icon-l-stroke-width: 1.2px;
     --link-decoration-thickness: 1px;
 }
 
@@ -49,10 +53,4 @@
     .markdown-embed-link {
         right: calc(-1 * var(--size-4-6));
     }
-}
-
-
-// Icons
-.is-mobile{
-    --icon-l-stroke-width: 1.2px;
 }
