--- a/scss/shared/_markdown-anchor.scss
+++ b/scss/shared/_markdown-anchor.scss
@@ -1,3 +1,7 @@
 .markdown-preview-section {
     anchor-name: --anchor-preview-section;
 }
+
+.markdown-reading-view {
+    anchor-name: --anchor-reading-view;
+}
