--- a/css/cssclasses/banner.css
+++ b/css/cssclasses/banner.css
@@ -12,6 +12,10 @@ Author: ElsaTam (Kapirklaa in Discord)
   anchor-name: --anchor-preview-section;
 }
 
+.markdown-reading-view {
+  anchor-name: --anchor-reading-view;
+}
+
 body {
   --banner-height: 300px;
   --banner-title-shadow-size: 0.5em;
@@ -21,6 +25,12 @@ body {
   --banner-slope-border-color: var(--color-accent);
   --banner-width: calc(100cqw + 2 * var(--file-margins));
   --banner-print-width: full-bleed;
+}
+
+.is-mobile {
+  --banner-height: 180px;
+  --banner-slope-border-width: 4px;
+  --banner-width: calc(100cqw + 2 * var(--file-margins-inline));
 }
 
 .markdown-preview-view.banner {
@@ -45,7 +55,16 @@ body {
   display: none;
 }
 .markdown-preview-view.banner .inline-title {
+  position: absolute;
+  top: var(--file-margins);
+  left: var(--file-margins);
+  padding-top: 0;
   text-shadow: var(--banner-title-shadow);
+}
+
+.is-mobile .markdown-preview-view.banner .inline-title {
+  top: var(--file-margins-block);
+  left: var(--file-margins-inline);
 }
 
 @media print {
@@ -97,6 +116,9 @@ body {
   .markdown-preview-view.show-properties.banner .metadata-container {
     margin-top: calc(var(--banner-height) - var(--file-margins) + 4px + 0.8em);
   }
+  .is-mobile .markdown-preview-view.show-properties.banner .metadata-container {
+    margin-top: calc(var(--banner-height) - var(--file-margins-block) + 4px + 0.8em);
+  }
 }
 .markdown-preview-view.banner.banner-gradient .mod-header + div + div > p > .image-embed:nth-child(1 of .image-embed) {
   -webkit-mask-image: linear-gradient(to bottom, black var(--file-margins), transparent);
@@ -124,6 +146,13 @@ body {
   text-align: center;
 }
 
+.is-mobile .markdown-preview-view.banner.banner-title {
+  --inline-title-line-height: 2;
+}
+.is-mobile .markdown-preview-view.banner.banner-title .inline-title {
+  left: unset;
+}
+
 .markdown-preview-view.banner.banner-slant,
 .markdown-preview-view.banner.banner-slope {
   --inline-title-size: 4em;
@@ -149,6 +178,11 @@ body {
   right: anchor(--anchor-preview-section right, var(--file-margins));
   left: 0;
   text-align: right;
+}
+
+.is-mobile .markdown-preview-view.banner:is(.banner-slant, .banner-slope) .inline-title {
+  top: calc(anchor(--anchor-preview-section top) + var(--banner-height) - var(--file-margins-block) - 1em - var(--banner-title-shadow-size));
+  right: anchor(--anchor-preview-section right, var(--file-margins-inline));
 }
 
 @media print {
