--- a/css/cssclasses/footer-img.css
+++ b/css/cssclasses/footer-img.css
@@ -11,6 +11,10 @@ Author: ElsaTam (Kapirklaa in Discord)
   anchor-name: --anchor-preview-section;
 }
 
+.markdown-reading-view {
+  anchor-name: --anchor-reading-view;
+}
+
 body {
   --workleaves-background: var(--background-primary);
   --workleaves-foreground: var(--text-normal);
@@ -72,14 +76,12 @@ body {
   }
   [class*=footer-img] > .markdown-preview-section > div:nth-last-child(1 of div.el-p):has(.image-embed) {
     --image-shadow-offset: 0;
-    position: fixed;
-    transform: translateY(calc(var(--file-margins) + 1px));
-    position-anchor: --anchor-reading-view;
-    bottom: anchor(bottom);
-    left: anchor(left);
+    position: sticky;
+    bottom: 0;
     width: calc(100cqw + 2 * var(--file-margins));
     font-size: 0;
     margin-left: calc(50% - 50cqw - var(--file-margins));
+    transform: translateY(calc(var(--file-margins) + 1px));
     background-color: var(--workleaves-background);
   }
   [class*=footer-img] > .markdown-preview-section > div:nth-last-child(1 of div.el-p):has(.image-embed) p {
@@ -105,6 +107,11 @@ body {
   }
   :is(.footer-background, .footer-bg)[class*=footer-img] > .markdown-preview-section > div:nth-last-child(2) {
     z-index: -1;
+  }
+  .is-mobile [class*=footer-img] > .markdown-preview-section > div:nth-last-child(1 of div.el-p):has(.image-embed) {
+    transform: translateY(calc(var(--file-margins-block) + 1px));
+    width: calc(100cqw + 2 * var(--file-margins-inline));
+    margin-left: calc(50% - 50cqw - var(--file-margins-inline));
   }
 }
 @media print {
