--- a/css/editor/aside.css
+++ b/css/editor/aside.css
@@ -17,6 +17,11 @@ body {
   --aside-border-thickness: 4px;
 }
 
+.is-mobile {
+  --aside-width: 200px;
+  --aside-border-thickness: 2px;
+}
+
 .markdown-preview-view aside,
 .markdown-preview-view .aside-left,
 .markdown-preview-view .aside-right {
