--- a/scss/editor/callouts/_callout-full-width-image.scss
+++ b/scss/editor/callouts/_callout-full-width-image.scss
@@ -37,9 +37,11 @@ $sel: $sel + ")";
     .callout-title {
         background: none;
         position: absolute;
+        justify-content: center;
         top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        left: 0;
+        right: 0;
+        transform: translateY(-50%);
         text-shadow: var(--fwi-title-shadow);
         z-index: 1;
     }
