--- a/snippets/editor/callouts/callout-clue.css
+++ b/snippets/editor/callouts/callout-clue.css
@@ -73,7 +73,8 @@ Author: ElsaTam (Kapirklaa in Discord)
   justify-content: center;
   position: absolute;
   top: calc(var(--padding-top) - 0.5em);
-  width: fit-content;
+  width: max-content;
+  max-width: 100%;
   background: none;
   z-index: 1;
   left: 50%;
