--- a/scss/cssclasses/_banner.scss
+++ b/scss/cssclasses/_banner.scss
@@ -1,5 +1,6 @@
 @forward '../shared/markdown-container';
 @forward '../shared/markdown-anchor';
+@forward '../shared/file-margins';
 
 $img-embed-sel: '.mod-header + div + div > p > .image-embed:nth-child(1 of .image-embed)';
 $img-embed-sel-print: '.mod-frontmatter + div > p > .image-embed:nth-child(1 of .image-embed)';
@@ -11,14 +12,13 @@ body {
     --banner-slope-angle: 4deg;
     --banner-slope-border-width: 5px;
     --banner-slope-border-color: var(--color-accent);
-    --banner-width: calc(100cqw + 2 * var(--file-margins));
+    --banner-width: calc(100cqw + 2 * var(--file-margins-inline));
     --banner-print-width: full-bleed;
 }
 
 .is-mobile {
     --banner-height: 180px;
     --banner-slope-border-width: 4px;
-    --banner-width: calc(100cqw + 2 * var(--file-margins-inline));
 }
 
 @mixin image-banner {
@@ -54,16 +54,11 @@ body {
 
     .inline-title {
         position: absolute;
-        top: var(--file-margins);
-        left: var(--file-margins);
+        top: var(--file-margins-block);
+        left: var(--file-margins-inline);
         padding-top: 0;
         text-shadow: var(--banner-title-shadow);
     }
-}
-
-.is-mobile .markdown-preview-view.banner .inline-title {
-    top: var(--file-margins-block);
-    left: var(--file-margins-inline);
 }
 
 @media print {
@@ -75,11 +70,11 @@ body {
             --banner-width: calc(100cqw);
         }
         .print .markdown-preview-view.banner #{$img-embed-sel-print} {
-            top: var(--file-margins);
-            left: var(--file-margins);
+            top: var(--file-margins-block);
+            left: var(--file-margins-inline);
         }
         .print .markdown-preview-view.banner {
-            padding-top: calc(var(--banner-height) + var(--file-margins));
+            padding-top: calc(var(--banner-height) + var(--file-margins-block));
         }
     }
     @container style(--banner-print-width: full-bleed) {
@@ -96,22 +91,19 @@ body {
 // Properties hidden
 .markdown-preview-view:not(.show-properties).banner .mod-header,
 .markdown-preview-view.hide-properties.banner .mod-header {
-    height: calc(var(--banner-height) - var(--file-margins));
-    padding-bottom: var(--file-margins);
+    height: calc(var(--banner-height) - var(--file-margins-block));
+    padding-bottom: var(--file-margins-block);
 }
 
 // Properties visible
 @container not style(--metadata-display-reading: none) {
     .markdown-preview-view.show-properties.banner .metadata-container {
-        margin-top: calc(var(--banner-height) - var(--file-margins) + 4px + 0.8em);
-    }
-    .is-mobile .markdown-preview-view.show-properties.banner .metadata-container {
         margin-top: calc(var(--banner-height) - var(--file-margins-block) + 4px + 0.8em);
     }
 }
 
 @mixin image-banner-gradient {
-    -webkit-mask-image: linear-gradient(to bottom, black var(--file-margins), transparent);
+    -webkit-mask-image: linear-gradient(to bottom, black var(--file-margins-block), transparent);
 }
 
 .markdown-preview-view.banner.banner-gradient {
@@ -145,11 +137,6 @@ body {
 }
 .is-mobile .markdown-preview-view.banner.banner-title {
     --inline-title-line-height: 2;
-
-    .inline-title {
-        left: unset;
-    }
-
 }
 
 @mixin image-banner-slope {
@@ -178,20 +165,14 @@ body {
         transform: rotate(calc(-1 * var(--banner-slope-angle)));
         transform-origin: bottom left;
         top: calc(var(--banner-height) - 1em - var(--banner-title-shadow-size));
-        right: var(--file-margins);
+        right: var(--file-margins-inline);
         left: 0;
         text-align: right;
     }
 }
 
 @supports (top: anchor(--anchor-preview-section top)) and (right: anchor(--anchor-preview-section right)) {
-
     .markdown-preview-view.banner:is(.banner-slant, .banner-slope) .inline-title {
-        top: calc(anchor(--anchor-preview-section top) + var(--banner-height) - var(--file-margins) - 1em - var(--banner-title-shadow-size));
-        right: anchor(--anchor-preview-section right, var(--file-margins));
-    }
-
-    .is-mobile .markdown-preview-view.banner:is(.banner-slant, .banner-slope) .inline-title {
         top: calc(anchor(--anchor-preview-section top) + var(--banner-height) - var(--file-margins-block) - 1em - var(--banner-title-shadow-size));
         right: anchor(--anchor-preview-section right, var(--file-margins-inline));
     }
