--- a/scss/mixins/_wide.scss
+++ b/scss/mixins/_wide.scss
@@ -1,6 +1,6 @@
 @mixin wide($proportion) {
     position: relative;
-    --w: calc(#{$proportion} * (100cqw + 2 * var(--file-margins)));
+    --w: calc(#{$proportion} * (100cqw + 2 * var(--file-margins-inline)));
     width: var(--w);
     left: calc(50% - var(--w) * 0.5);
 }
