File margins splitted between inline and block

--- a/css/cssclasses/footer-img.css
+++ b/css/cssclasses/footer-img.css
@@ -21,6 +21,17 @@ body {
 }
 
 body {
+  --file-margins-block: var(--size-4-8);
+  --file-margins-inline: var(--size-4-8);
+  --file-margins: var(--file-margins-block) var(--file-margins-inline);
+}
+
+.is-mobile {
+  --file-margins-block: var(--size-4-2);
+  --file-margins-inline: var(--size-4-6);
+}
+
+body {
   --footer-img-height: 220px;
   --footer-img-opacity: 0.2;
   --footer-img-color: rgb(var(--mono-rgb-100));
@@ -78,10 +89,10 @@ body {
     --image-shadow-offset: 0;
     position: sticky;
     bottom: 0;
-    width: calc(100cqw + 2 * var(--file-margins));
+    width: calc(100cqw + 2 * var(--file-margins-inline));
     font-size: 0;
-    margin-left: calc(50% - 50cqw - var(--file-margins));
-    transform: translateY(calc(var(--file-margins) + 1px));
+    margin-left: calc(50% - 50cqw - var(--file-margins-inline));
+    transform: translateY(calc(var(--file-margins-block) + 1px));
     background-color: var(--workleaves-background);
   }
   [class*=footer-img] > .markdown-preview-section > div:nth-last-child(1 of div.el-p):has(.image-embed) p {
@@ -107,11 +118,6 @@ body {
   }
   :is(.footer-background, .footer-bg)[class*=footer-img] > .markdown-preview-section > div:nth-last-child(2) {
     z-index: -1;
-  }
-  .is-mobile [class*=footer-img] > .markdown-preview-section > div:nth-last-child(1 of div.el-p):has(.image-embed) {
-    transform: translateY(calc(var(--file-margins-block) + 1px));
-    width: calc(100cqw + 2 * var(--file-margins-inline));
-    margin-left: calc(50% - 50cqw - var(--file-margins-inline));
   }
 }
 @media print {
