--- a/css/cssclasses/banner.css
+++ b/css/cssclasses/banner.css
@@ -17,20 +17,30 @@ Author: ElsaTam (Kapirklaa in Discord)
 }
 
 body {
+  --file-margins-block: var(--size-4-8);
+  --file-margins-inline: var(--size-4-8);
+  --file-margins: var(--file-margins-block) var(--file-margins-inline);
+}
+
+.is-mobile {
+  --file-margins-block: var(--size-4-2);
+  --file-margins-inline: var(--size-4-6);
+}
+
+body {
   --banner-height: 300px;
   --banner-title-shadow-size: 0.5em;
   --banner-title-shadow: 0px 0px calc(var(--banner-title-shadow-size) * 0.2) rgb(var(--mono-rgb-0)), 0px 0px calc(var(--banner-title-shadow-size) * 0.5) rgb(var(--mono-rgb-0)), 0px 0px var(--banner-title-shadow-size) rgb(var(--mono-rgb-0));
   --banner-slope-angle: 4deg;
   --banner-slope-border-width: 5px;
   --banner-slope-border-color: var(--color-accent);
-  --banner-width: calc(100cqw + 2 * var(--file-margins));
+  --banner-width: calc(100cqw + 2 * var(--file-margins-inline));
   --banner-print-width: full-bleed;
 }
 
 .is-mobile {
   --banner-height: 180px;
   --banner-slope-border-width: 4px;
-  --banner-width: calc(100cqw + 2 * var(--file-margins-inline));
 }
 
 .markdown-preview-view.banner {
@@ -56,15 +66,10 @@ body {
 }
 .markdown-preview-view.banner .inline-title {
   position: absolute;
-  top: var(--file-margins);
-  left: var(--file-margins);
-  padding-top: 0;
-  text-shadow: var(--banner-title-shadow);
-}
-
-.is-mobile .markdown-preview-view.banner .inline-title {
   top: var(--file-margins-block);
   left: var(--file-margins-inline);
+  padding-top: 0;
+  text-shadow: var(--banner-title-shadow);
 }
 
 @media print {
@@ -89,11 +94,11 @@ body {
       --banner-width: calc(100cqw);
     }
     .print .markdown-preview-view.banner .mod-frontmatter + div > p > .image-embed:nth-child(1 of .image-embed) {
-      top: var(--file-margins);
-      left: var(--file-margins);
+      top: var(--file-margins-block);
+      left: var(--file-margins-inline);
     }
     .print .markdown-preview-view.banner {
-      padding-top: calc(var(--banner-height) + var(--file-margins));
+      padding-top: calc(var(--banner-height) + var(--file-margins-block));
     }
   }
   @container style(--banner-print-width: full-bleed) {
@@ -108,25 +113,22 @@ body {
 }
 .markdown-preview-view:not(.show-properties).banner .mod-header,
 .markdown-preview-view.hide-properties.banner .mod-header {
-  height: calc(var(--banner-height) - var(--file-margins));
-  padding-bottom: var(--file-margins);
+  height: calc(var(--banner-height) - var(--file-margins-block));
+  padding-bottom: var(--file-margins-block);
 }
 
 @container not style(--metadata-display-reading: none) {
   .markdown-preview-view.show-properties.banner .metadata-container {
-    margin-top: calc(var(--banner-height) - var(--file-margins) + 4px + 0.8em);
-  }
-  .is-mobile .markdown-preview-view.show-properties.banner .metadata-container {
     margin-top: calc(var(--banner-height) - var(--file-margins-block) + 4px + 0.8em);
   }
 }
 .markdown-preview-view.banner.banner-gradient .mod-header + div + div > p > .image-embed:nth-child(1 of .image-embed) {
-  -webkit-mask-image: linear-gradient(to bottom, black var(--file-margins), transparent);
+  -webkit-mask-image: linear-gradient(to bottom, black var(--file-margins-block), transparent);
 }
 
 @media print {
   .print .markdown-preview-view.banner.banner-gradient .mod-frontmatter + div > p > .image-embed:nth-child(1 of .image-embed) {
-    -webkit-mask-image: linear-gradient(to bottom, black var(--file-margins), transparent);
+    -webkit-mask-image: linear-gradient(to bottom, black var(--file-margins-block), transparent);
   }
 }
 .markdown-preview-view.banner.banner-title {
@@ -148,9 +150,6 @@ body {
 
 .is-mobile .markdown-preview-view.banner.banner-title {
   --inline-title-line-height: 2;
-}
-.is-mobile .markdown-preview-view.banner.banner-title .inline-title {
-  left: unset;
 }
 
 .markdown-preview-view.banner.banner-slant,
@@ -175,17 +174,13 @@ body {
   transform: rotate(calc(-1 * var(--banner-slope-angle)));
   transform-origin: bottom left;
   top: calc(var(--banner-height) - 1em - var(--banner-title-shadow-size));
-  right: var(--file-margins);
+  right: var(--file-margins-inline);
   left: 0;
   text-align: right;
 }
 
 @supports (top: anchor(--anchor-preview-section top)) and (right: anchor(--anchor-preview-section right)) {
   .markdown-preview-view.banner:is(.banner-slant, .banner-slope) .inline-title {
-    top: calc(anchor(--anchor-preview-section top) + var(--banner-height) - var(--file-margins) - 1em - var(--banner-title-shadow-size));
-    right: anchor(--anchor-preview-section right, var(--file-margins));
-  }
-  .is-mobile .markdown-preview-view.banner:is(.banner-slant, .banner-slope) .inline-title {
     top: calc(anchor(--anchor-preview-section top) + var(--banner-height) - var(--file-margins-block) - 1em - var(--banner-title-shadow-size));
     right: anchor(--anchor-preview-section right, var(--file-margins-inline));
   }
