--- a/snippets/editor/embeds/audio-cassette.css
+++ b/snippets/editor/embeds/audio-cassette.css
@@ -15,6 +15,17 @@ Author: ElsaTam (Kapirklaa in Discord)
   container: markdown-view/inline-size;
 }
 
+body {
+  --file-margins-block: var(--size-4-8);
+  --file-margins-inline: var(--size-4-8);
+  --file-margins: var(--file-margins-block) var(--file-margins-inline);
+}
+
+.is-mobile {
+  --file-margins-block: var(--size-4-2);
+  --file-margins-inline: var(--size-4-6);
+}
+
 .media-embed[alt*=cassette] {
   --cassette-width: 0.8;
 }
@@ -36,7 +47,7 @@ Author: ElsaTam (Kapirklaa in Discord)
   --ratio: calc(45.546 / 72.985);
   content: "";
   display: block;
-  height: calc(min(var(--cassette-width) * var(--file-line-width), 100cqw - var(--file-margins)) * var(--ratio));
+  height: calc(min(var(--cassette-width) * var(--file-line-width), 100cqw - var(--file-margins-block)) * var(--ratio));
   width: calc(100% * var(--cassette-width));
   margin-inline: auto;
   background-image: var(--cassette);
@@ -44,10 +55,6 @@ Author: ElsaTam (Kapirklaa in Discord)
   background-repeat: no-repeat;
   background-position: center bottom;
   margin-bottom: var(--size-4-2);
-}
-
-.is-mobile .media-embed[alt*=cassette]::before {
-  height: calc(min(var(--cassette-width) * var(--file-line-width), 100cqw - var(--file-margins-block)) * var(--ratio));
 }
 
 .markdown-preview-view .media-embed[alt*=cassette]::before {
